# crucible

backend/: Cargo.toml  README.md
backend/migrations/: 20260528010000_build_request_dedup.sql
backend/src/: error.rs  lib.rs  main.rs
backend/src/services/: dedup.rs  log_alerts.rs  mod.rs
backend/src/test_utils/: factories.rs
backend/src/workers/: mod.rs
