[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "request-id"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "1"

# Move mockall to [dependencies] with optional = true, and remove it from [dev-dependencies].
mockall = { version = "0.13", optional = true }

[dev-dependencies]
# Testing
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
testcontainers = "0.16"
wiremock = "0.6"

tower = { version = "0.5", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
mime = "0.3"
tokio = { version = "1", features = ["full", "test-util"] }
arc-swap = "1.7"
async-trait = "0.1"
dotenvy = "0.15"
utoipa = { version = "5.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }
apalis = { version = "0.6" }
apalis-redis = "0.6"
rust_decimal = { version = "1.35", features = ["serde"] }
stellar-xdr = { version = "21.0", features = ["std"] }
base64 = "0.22"
validator = { version = "0.19", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower_governor = "0.4"
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "http-proto", "reqwest-client"] }
tracing-opentelemetry = { version = "0.32", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
# OpenTelemetry and tracing instrumentation
opentelemetry-semantic-conventions = "0.16"
tonic = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "backup"
path = "src/bin/backup.rs"
[features]
testutils = ["mockall"]
